--- a/_posts/2023-7-5-ITT.md
+++ b/_posts/2023-7-5-ITT.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "July 31 - August 4, 2023 - FDIC Introduction to Telecommunications and Networking"
+title:  "O, 2023 - FDIC Introduction to Telecommunications and Networking"
 ---
 Hi Folks:
 
