--- a/_posts/2024-07-24-DIIF.md
+++ b/_posts/2024-07-24-DIIF.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "August 5, 2024 - FDIC VPNs and Remote Access"
+title:  "August 5, 2024 - FDIC Deploying Internet and Intranet Firewalls"
 ---
 
 This page links to resources that might be interesting or useful during class. It's not an assignment and nothing here is required reading. As we move through the week, I'll post more links related to class topics or other interesting nuggets.
