must I put a message each time I commit?

--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Just Testing"
+title:  "May 12 VPNs and Remote Access"
 ---
 
-### Let's see
+### This is a placeholder for content for the above class.
 
-- how well this new push works 
+- Shoot a note at mkolon@hillvt.com if you have any questions.  
