first real page

--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -1,8 +1,10 @@
 ---
 layout: post
-title:  "May 12 VPNs and Remote Access"
+title:  "May 12: VPNs and Remote Access"
 ---
 
-### This is a placeholder for content for the above class.
+### Monday, May 12, 2025
+- Have a [look at this](https://www.youtube.com/watch?v=WVDQEoe6ZWY) if you can. It's only 8 minutes long.
+- Ask yourself if the VPN Tom is talking about is the same as the ones we're going to discuss in class? Are there differences and/or similarities?
 
-- Shoot a note at mkolon@hillvt.com if you have any questions.  
+- Shoot a note to mkolon@hillvt.com if you have any questions.  
