Not sure what I just did but needed to satisfy the auth demon.
checking further additions

--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -8,3 +8,6 @@ title:  "May 12: VPNs and Remote Access"
 - Ask yourself if the VPN Tom is talking about is the same as the ones we're going to discuss in class? Are there differences and/or similarities?
 
 - Shoot a note to mkolon@hillvt.com if you have any questions.  
+
+- Here's another add to ensure it's working right.
+
