more edits and some bolding

--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -4,9 +4,9 @@ title:  "May 12: VPNs and Remote Access"
 ---
 
 ### Monday, May 12, 2025
-- Have a [look at this](https://www.youtube.com/watch?v=WVDQEoe6ZWY) if you can. It's only 8 minutes long. It's even a bit funny.
-- Ask yourself if the VPN that Tom is talking about is the same as the ones we're going to discuss in class? Are there differences and/or similarities?
+- Have a [**look at this**](https://www.youtube.com/watch?v=WVDQEoe6ZWY) if you can. It's only 8 minutes long. It's even a bit funny.
+- Are the VPNs that Tom is talking about the same as the ones we're going to discuss in class? Do banks use them? Are there differences and/or similarities?
 
-- Shoot a note to mkolon@hillvt.com if you have any questions.  
+- Shoot a note to mkolon@hillvt.com if you have any questions, or just ask them in class.  
 
 
