--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -7,6 +7,6 @@ title:  "May 12: FDIC VPNs and Remote Access"
 - Have a [**look at this**](https://www.youtube.com/watch?v=WVDQEoe6ZWY) if you can. It's only 8 minutes long. It's even a bit funny.
 - Are the VPNs that Tom is talking about the same as the ones we're going to discuss in class? Do banks use them? Are there differences and/or similarities?
 
-- Shoot a note to mkolon@hillvt.com if you have any questions, or just ask them in class.  
+- Shoot a note to matt@hillvt.com if you have any questions, or just ask them in class.  
 
 
