--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -3,6 +3,10 @@ layout: post
 title:  "May 12: FDIC VPNs and Remote Access"
 ---
 
+- my email is matt@hillvt.com, you can mail me for anything you need, anytime.
+- if you have connectivity problems, you can also text me on 8028990704.
+- get a [new copy of the course materials](http://class.hillvt.com/assets/FDIC-VPNRA-20250418.pptx), there aren't too many changes but why not have a new one, right?
+
 ### Monday, May 12, 2025
 - Have a [**look at this**](https://www.youtube.com/watch?v=WVDQEoe6ZWY) if you can. It's only 8 minutes long. It's even a bit amusing.
 - Are the VPNs (that Tom is talking about) the same as the ones we're going to discuss in class? Do banks use them? Are there differences and/or similarities?
