--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -50,3 +50,17 @@ title:  "May 12: FDIC VPNs and Remote Access"
 - Would it be useful in a community bank?
 - Would you be happy to see it in a bank you examined?
 - What did you personally think of the solution?
+
+### Wednesday, May 14, 2025
+
+- Are you aware of the [FDIC Podcast](https://creators.spotify.com/pod/profile/fdic/episodes/Verifying-Identity-in-a-Digital-World-e1crru9)? I was pretty amazed to see episodes about, among other things, Verifying Identity in a Digital World.
+
+- I mentioned that Apple iMessage (their IP-based messaging client) has [some privacy enhancements available](https://www.wired.com/story/how-apple-advanced-data-protection-works-and-how-to-turn-it-on/).
+
+- There are many, many online treatments of cryptography. Here are a few decent ones:
+  - [Symmetric vs Asymmetric Encryption](https://www.techrepublic.com/article/asymmetric-vs-symmetric-encryption/)
+  - 
+  - [Public Key Infrastructure](https://www.fortinet.com/resources/cyberglossary/public-key-infrastructure)
+
+- After class, Alex Li asked an interesting question about Fortinet VPN client certificates. [Here are the docs](https://docs.fortinet.com/document/fortigate/7.4.2/administration-guide/266506/ssl-vpn-with-certificate-authentication), and here is an explanation of why you might need them. And for the most masochistic among you, there is a [NIST doc detailing the use of IPsec VPNs that covers client certificates](https://chatgpt.com/c/6823de41-2e28-8002-91ea-97f1432fc680) in depth (in section 3.3.1). The short answer is that an IT department might use these when they are concerned about authenticating the client machine as well as the user.
+
