--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -57,10 +57,12 @@ title:  "May 12: FDIC VPNs and Remote Access"
 
 - I mentioned that Apple iMessage (their IP-based messaging client) has [some privacy enhancements available](https://www.wired.com/story/how-apple-advanced-data-protection-works-and-how-to-turn-it-on/).
 
-- There are many, many online treatments of cryptography. Here are a few decent ones:
+- There are many, many online treatments of cryptography topics. Here are a few decent ones:
   - [Symmetric vs Asymmetric Encryption](https://www.techrepublic.com/article/asymmetric-vs-symmetric-encryption/)
-  - 
   - [Public Key Infrastructure](https://www.fortinet.com/resources/cyberglossary/public-key-infrastructure)
+  - I must admit I love Cloudflare. Explainers like these, on [Public Key Cryptography](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) and [SSL Certificates](https://www.cloudflare.com/learning/ssl/what-is-an-ssl-certificate/), are a big part of why I feel that way.
+
 
 - After class, Alex Li asked an interesting question about Fortinet VPN client certificates. [Here are the docs](https://docs.fortinet.com/document/fortigate/7.4.2/administration-guide/266506/ssl-vpn-with-certificate-authentication), and here is an explanation of why you might need them. And for the most masochistic among you, there is a [NIST doc detailing the use of IPsec VPNs that covers client certificates](https://chatgpt.com/c/6823de41-2e28-8002-91ea-97f1432fc680) in depth (in section 3.3.1). The short answer is that an IT department might use these when they are concerned about authenticating the client machine as well as the user.
 
+- I accidentally ran into this guide on [Selecting and Hardening Remote Access VPN Solutions](https://media.defense.gov/2021/Sep/28/2002863184/-1/-1/0/CSI_SELECTING-HARDENING-REMOTE-ACCESS-VPNS-20210928.PDF) while looking for something else. Honest I did! It's a few years old, but then again it's from the NSA, so it's pretty good, too.
