--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -53,20 +53,20 @@ title:  "May 12: FDIC VPNs and Remote Access"
 
 ### Wednesday, May 14, 2025
 
-- Are you aware of the [FDIC Podcast](https://creators.spotify.com/pod/profile/fdic/episodes/Verifying-Identity-in-a-Digital-World-e1crru9)? I was pretty amazed to see episodes about, among other things, Verifying Identity in a Digital World.
+- Are you aware of the [**FDIC Podcast**](https://creators.spotify.com/pod/profile/fdic/episodes/Verifying-Identity-in-a-Digital-World-e1crru9)? I was pretty amazed to see episodes about, among other things, Verifying Identity in a Digital World.
 
-- I mentioned that Apple iMessage (their IP-based messaging client) has [some privacy enhancements available](https://www.wired.com/story/how-apple-advanced-data-protection-works-and-how-to-turn-it-on/).
+- I mentioned that Apple iMessage (their IP-based messaging client) has [**some privacy enhancements available**](https://www.wired.com/story/how-apple-advanced-data-protection-works-and-how-to-turn-it-on/).
 
 - There are many, many online treatments of cryptography topics. Here are a few decent ones:
-  - [Symmetric vs Asymmetric Encryption](https://www.techrepublic.com/article/asymmetric-vs-symmetric-encryption/)
-  - [Public Key Infrastructure](https://www.fortinet.com/resources/cyberglossary/public-key-infrastructure)
-  - I must admit I love Cloudflare. Explainers like these, on [Public Key Cryptography](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) and [SSL Certificates](https://www.cloudflare.com/learning/ssl/what-is-an-ssl-certificate/), are a big part of why I feel that way.
-  
+  - [**Symmetric vs Asymmetric Encryption**](https://www.techrepublic.com/article/asymmetric-vs-symmetric-encryption/)
+  - [**Public Key Infrastructure**](https://www.fortinet.com/resources/cyberglossary/public-key-infrastructure)
+  - I must admit I love Cloudflare. Explainers like these, on [**Public Key Cryptography**](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) and [**SSL Certificates**](https://www.cloudflare.com/learning/ssl/what-is-an-ssl-certificate/), are a big part of why I feel that way.
+  -
 
 
-- After class, Alex Li asked an interesting question about Fortinet VPN client certificates. [Here are the docs](https://docs.fortinet.com/document/fortigate/7.4.2/administration-guide/266506/ssl-vpn-with-certificate-authentication), and here is an explanation of why you might need them. And for the most masochistic among you, there is a [NIST doc detailing the use of IPsec VPNs that covers client certificates](https://chatgpt.com/c/6823de41-2e28-8002-91ea-97f1432fc680) in depth (in section 3.3.1). The short answer is that an IT department might use these when they are concerned about authenticating the client machine as well as the user.
+- After class, Alex Li asked an interesting question about Fortinet VPN client certificates. [**Here are the docs**](https://docs.fortinet.com/document/fortigate/7.4.2/administration-guide/266506/ssl-vpn-with-certificate-authentication), and here is [**an explanation of why you might need them**](https://stackoverflow.com/questions/2164397/why-should-i-authenticate-a-client-using-a-certificate). And for the most masochistic among you, there is a [**NIST doc detailing the use of IPsec VPNs**](https://chatgpt.com/c/6823de41-2e28-8002-91ea-97f1432fc680) that covers client certificates in depth (in section 3.3.1). The short answer is that an IT department might use these when they are concerned about authenticating the client machine as well as the user.
 
-- I accidentally ran into this guide on [Selecting and Hardening Remote Access VPN Solutions](https://media.defense.gov/2021/Sep/28/2002863184/-1/-1/0/CSI_SELECTING-HARDENING-REMOTE-ACCESS-VPNS-20210928.PDF) while looking for something else. Honest I did! It's a few years old, but then again it's from the NSA, so it's pretty good, too.
+- I accidentally ran into this guide on [**Selecting and Hardening Remote Access VPN Solutions**](https://media.defense.gov/2021/Sep/28/2002863184/-1/-1/0/CSI_SELECTING-HARDENING-REMOTE-ACCESS-VPNS-20210928.PDF) while looking for something else. Honest I did! It's a few years old, but then again it's from the NSA, so it's pretty good, too.
 
 - Here are a couple of docs I've dreamed up over the years that you could find useful. A [**list of controls**](https://class.hillvt.com/assets/VPNRA-Controls.docx) and [**one of documentation**](https://class.hillvt.com/assets/VPNRA-Docs.docx) that might be useful in considering bank VPN and Remote Access implementations. **These are not official FDIC documents**, just my slightly informed thinking.
 
