--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -61,7 +61,7 @@ title:  "May 12: FDIC VPNs and Remote Access"
   - [**Symmetric vs Asymmetric Encryption**](https://www.techrepublic.com/article/asymmetric-vs-symmetric-encryption/)
   - [**Public Key Infrastructure**](https://www.fortinet.com/resources/cyberglossary/public-key-infrastructure)
   - I must admit I love Cloudflare. Explainers like these, on [**Public Key Cryptography**](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) and [**SSL Certificates**](https://www.cloudflare.com/learning/ssl/what-is-an-ssl-certificate/), are a big part of why I feel that way.
-  -
+
 
 
 - After class, Alex Li asked an interesting question about Fortinet VPN client certificates. [**Here are the docs**](https://docs.fortinet.com/document/fortigate/7.4.2/administration-guide/266506/ssl-vpn-with-certificate-authentication), and here is [**an explanation of why you might need them**](https://stackoverflow.com/questions/2164397/why-should-i-authenticate-a-client-using-a-certificate). And for the most masochistic among you, there is a [**NIST doc detailing the use of IPsec VPNs**](https://chatgpt.com/c/6823de41-2e28-8002-91ea-97f1432fc680) that covers client certificates in depth (in section 3.3.1). The short answer is that an IT department might use these when they are concerned about authenticating the client machine as well as the user.
@@ -71,3 +71,6 @@ title:  "May 12: FDIC VPNs and Remote Access"
 - Here are a couple of docs I've dreamed up over the years that you could find useful. A [**list of controls**](https://class.hillvt.com/assets/VPNRA-Controls.docx) and [**one of documentation**](https://class.hillvt.com/assets/VPNRA-Docs.docx) that might be useful in considering bank VPN and Remote Access implementations. **These are not official FDIC documents**, just my slightly informed thinking.
 
 - I also took a shot at making a [Remote Access Risk Assessment](http://class.hillvt.com/assets/Remote_Access_Risk_Assessment.pdf). What do you think of this? Is it useful?
+
+- You can't do anything today without encountering an Artificial Intelligence angle, and [**VPNs are no exception**](https://medium.com/@44dying/the-impact-of-ai-on-vpn-security-predictive-threat-detection-and-response-d371a34c71c0). We may not see [**AI doing its work in the VPN context**](https://www.makeuseof.com/how-does-ai-work-in-vpns/), but that doesn't mean VPN and networking companies aren't using it. What could that look like for banks?
+- In case you have questions about Wireguard, [**here's some good lightweight tech info**](https://www.techradar.com/vpn/what-is-wireguard) from TechRadar.
