--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -70,7 +70,7 @@ title:  "May 12: FDIC VPNs and Remote Access"
 
 - Here are a couple of docs I've dreamed up over the years that you could find useful. A [**list of controls**](https://class.hillvt.com/assets/VPNRA-Controls.docx) and [**one of documentation**](https://class.hillvt.com/assets/VPNRA-Docs.docx) that might be useful in considering bank VPN and Remote Access implementations. **These are not official FDIC documents**, just my slightly informed thinking.
 
-- I also took a shot at making a [Remote Access Risk Assessment](http://class.hillvt.com/assets/Remote_Access_Risk_Assessment.pdf). What do you think of this? Is it useful?
+- I also took a shot at making a [**Remote Access Risk Assessment**](http://class.hillvt.com/assets/Remote_Access_Risk_Assessment.pdf). What do you think of this? Is it useful, perhaps as the start of something you might make yourself?
 
 - You can't do anything today without encountering an Artificial Intelligence angle, and [**VPNs are no exception**](https://medium.com/@44dying/the-impact-of-ai-on-vpn-security-predictive-threat-detection-and-response-d371a34c71c0). We may not see [**AI doing its work in the VPN context**](https://www.makeuseof.com/how-does-ai-work-in-vpns/), but that doesn't mean VPN and networking companies aren't using it. What could that look like for banks?
 - In case you have questions about Wireguard, [**here's some good lightweight tech info**](https://www.techradar.com/vpn/what-is-wireguard) from TechRadar.
