--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -68,9 +68,12 @@ title:  "May 12: FDIC VPNs and Remote Access"
 
 - I accidentally ran into this guide on [**Selecting and Hardening Remote Access VPN Solutions**](https://media.defense.gov/2021/Sep/28/2002863184/-1/-1/0/CSI_SELECTING-HARDENING-REMOTE-ACCESS-VPNS-20210928.PDF) while looking for something else. Honest I did! It's a few years old, but then again it's from the NSA, so it's pretty good, too.
 
-- Here are a couple of docs I've dreamed up over the years that you could find useful. A [**list of controls**](https://class.hillvt.com/assets/VPNRA-Controls.docx) and [**one of documentation**](https://class.hillvt.com/assets/VPNRA-Docs.docx) that might be useful in considering bank VPN and Remote Access implementations. **These are not official FDIC documents**, just my slightly informed thinking.
+- Here are a couple of docs we've dreamed up over the years that you could find useful. A [**list of controls**](https://class.hillvt.com/assets/VPNRA-Controls.docx) and [**one of documentation**](https://class.hillvt.com/assets/VPNRA-Docs.docx) that might be useful in considering bank VPN and Remote Access implementations. **These are not official FDIC documents**, just my slightly informed thinking.
 
-- I also took a shot at making a [**Remote Access Risk Assessment**](http://class.hillvt.com/assets/Remote_Access_Risk_Assessment.pdf). What do you think of this? Is it useful, perhaps as the start of something you might make yourself?
+- Here's a shot at making a [**Remote Access Risk Assessment**](http://class.hillvt.com/assets/Remote_Access_Risk_Assessment.pdf). What do you think of this? Is it useful, perhaps as the start of something you might make yourself?
 
 - You can't do anything today without encountering an Artificial Intelligence angle, and [**VPNs are no exception**](https://medium.com/@44dying/the-impact-of-ai-on-vpn-security-predictive-threat-detection-and-response-d371a34c71c0). We may not see [**AI doing its work in the VPN context**](https://www.makeuseof.com/how-does-ai-work-in-vpns/), but that doesn't mean VPN and networking companies aren't using it. What could that look like for banks?
+
 - In case you have questions about Wireguard, [**here's some good lightweight tech info**](https://www.techradar.com/vpn/what-is-wireguard) from TechRadar.
+
+- Does the bank or their outsource IT use RDP for remote admin? [**Maybe they should think about that again88](https://news.sophos.com/en-us/2024/03/20/remote-desktop-protocol-the-series/)
