--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -76,4 +76,4 @@ title:  "May 12: FDIC VPNs and Remote Access"
 
 - In case you have questions about Wireguard, [**here's some good lightweight tech info**](https://www.techradar.com/vpn/what-is-wireguard) from TechRadar.
 
-- Does the bank or their outsource IT use RDP for remote admin? [**Maybe they should think about that again88](https://news.sophos.com/en-us/2024/03/20/remote-desktop-protocol-the-series/)
+- Does the bank or their outsource IT use RDP for remote admin? [**Maybe they should think about that again**](https://news.sophos.com/en-us/2024/03/20/remote-desktop-protocol-the-series/)
