--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -77,3 +77,6 @@ title:  "May 12: FDIC VPNs and Remote Access"
 - In case you have questions about Wireguard, [**here's some good lightweight tech info**](https://www.techradar.com/vpn/what-is-wireguard) from TechRadar.
 
 - Does the bank or their outsource IT use RDP for remote admin? [**Maybe they should think about that again**](https://news.sophos.com/en-us/2024/03/20/remote-desktop-protocol-the-series/)
+
+- Sean and I discussed Onion Routing and TOR (he made me!) briefly. These aren't topics we need to discuss in this class, but in the interest of completeness, here is a link to [the TOR project](https://www.torproject.org/) and you can take it from there. You should know what it is and what it can do, but be aware that you can't follow the link on your FDIC-provided conputer, and other regulators would likely have a similar position.
+
