--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -80,3 +80,5 @@ title:  "May 12: FDIC VPNs and Remote Access"
 
 - Sean and I touched on Onion Routing and TOR (he made me!) These aren't topics we need to discuss in this class, but in the interest of completeness, here is a link to [**the TOR project**](https://www.torproject.org/) and you can take it from there. You should know what it is and what it can do, but be aware that you can't follow the link on your FDIC-provided computer. Other regulators would likely have a similar position.
 
+- Here's a link to the [**Spectrum Enterprise SD-WAN**](https://boingit.com/MNE10.mp4) demo I showed you in class. 
+
