added book refs

--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -82,7 +82,7 @@ title:  "May 12: FDIC VPNs and Remote Access"
 
 - Here's a link to the [**Spectrum Enterprise SD-WAN**](https://boingit.com/MNE10.mp4) demo I showed you in class. 
 
-- The Economist’s 2021 book of the year was the great [**Privacy is Power**](https://bookshop.org/p/books/privacy-is-power-why-and-how-you-should-take-back-control-of-your-data-carissa-veliz/15315465?ean=9781612199672) by Carissa Véliz.
+- <em>The Economist</em>’s 2021 book of the year was the great [**Privacy is Power**](https://bookshop.org/p/books/privacy-is-power-why-and-how-you-should-take-back-control-of-your-data-carissa-veliz/15315465?ean=9781612199672) by Carissa Véliz.
 
 - Yesterday I mentioned the OG of Internet Privacy herself, [**Shoshanna Zuboff**](https://en.wikipedia.org/wiki/Shoshana_Zuboff), but neglected to link to her [**magnum opus**](https://bookshop.org/p/books/the-age-of-surveillance-capitalism-the-fight-for-a-human-future-at-the-new-frontier-of-power-shoshana-zuboff/9240225?ean=9781541758001). Carissa Véliz certainly read this book.
 
