added book refs

--- a/_posts/2025-04-20-VPNRA.md
+++ b/_posts/2025-04-20-VPNRA.md
@@ -53,7 +53,7 @@ title:  "May 12: FDIC VPNs and Remote Access"
 
 ### Wednesday, May 14, 2025
 
-- Are you aware of the [**FDIC Podcast**](https://creators.spotify.com/pod/profile/fdic/episodes/Verifying-Identity-in-a-Digital-World-e1crru9)? I was pretty amazed to see episodes about, among other things, Verifying Identity in a Digital World.
+- Are you aware of the [**FDIC Podcast**](https://creators.spotify.com/pod/profile/fdic/episodes/Verifying-Identity-in-a-Digital-World-e1crru9)? I was pretty amazed to see episodes about, among other things, <em>Verifying Identity in a Digital World</em>.
 
 - I mentioned that Apple iMessage (their IP-based messaging client) has [**some privacy enhancements available**](https://www.wired.com/story/how-apple-advanced-data-protection-works-and-how-to-turn-it-on/).
 
