--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -3,7 +3,7 @@ layout: post
 title:  "June 23-27, 2025 - FDIC Introduction to Telecommunications and Networking"
 ---
 
-This page links to resources that might be interesting or useful during class. It's not an assignment and nothing here is required reading. As we move through the week, I'll post more links related to class topics, assignments, and other interesting nuggets.
+This page links to resources that might be interesting or useful during class. **It's not an assignment and nothing here is required reading.** But as we move through the week, I'll post links related to class topics, assignments, and other interesting nuggets.
 
 ### Monday June 23
 
