--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -12,3 +12,11 @@ This page links to resources that might be interesting or useful during class. *
 - If you're bored by history, that's a shame, but just know that Claude S is the guy who figured out that [**we should use bits**](https://en.wikipedia.org/wiki/A_Mathematical_Theory_of_Communication) to process, store, and communicate information. It might seem obvious now, but it was quite revolutionary in 1948. There – now you don't need to watch a tedious historical documentary! How do you think Shannon's work influenced how banks operate today?
 
 - Remember that ~~great~~ horrible day in October 2021 when all of Meta's properties (meaning Facebook/Insta/WhatsApp/etc) disappeared from the internet for about 6 hours? [**This is why that happened.**](https://blog.cloudflare.com/october-2021-facebook-outage/) The article is pretty detailed, and you probably won't grok it all quite yet, but a quick scan might give you some ideas. By the time we're through with class, you'll know enough to understand most of it. **What if it had not been Meta, but a Core Banking Service Provider who had suffered this fate?** Could that happen?
+
+### Tuesday June 24
+
+- I mentioned that I am involved with a tiny fiber ISP called [**Mansfield Community Fiber**](https://mcfibervt.com) here in Northern Vermont. Broadband to the people!
+
+- Some companies are so powerful that they can just re-write lots of protocols and do things their way. That's what Google did when they developed and began using [**the QUIC protocol**](https://en.wikipedia.org/wiki/QUIC) to make up for what they perceived as weaknesses in TCP. If you ever use Google Chrome as your browser, you've almost certainly used it.
+
+
