--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -19,6 +19,6 @@ This page links to resources that might be interesting or useful during class. *
 
 - Some companies are so powerful that they can just re-write lots of protocols and do things their way. That's what Google did when they developed and began using [**the QUIC protocol**](https://en.wikipedia.org/wiki/QUIC) to make up for what they perceived as weaknesses in TCP. If you ever use Google Chrome as your browser, you've almost certainly used QUIC.
 
-- Here's a living document I'll continue to develop this week, a [**glossary/risk list**](https://class.hillvt.com/assets/glossary.txt) for topics in this class. It's incomplete and lame at this point, hopefully it will get better during the week. That is, if you help me keep my eye on it and ask good questions.
+- Here's a living document I'll continue to develop this week, a [**glossary/risk list**](https://class.hillvt.com/assets/glossary.txt) for topics in this class. It's incomplete and kind of lame at this point, it will get better this week. That is, if you help me keep an eye on it and ask good questions for me to answer and add.
 
-
+- As you can see, one physical layer risk is cable tapping. It's hard to imagine that being done against a community bank, but hey, never say never! The US did this during the cold war, a crazy story that's outlined in [**this fantastic book**](https://www.thriftbooks.com/w/blind-mans-bluff-the-untold-story-of-american-submarine-espionage-by-sherry-sontag-christopher-drew/250927/).
