new post section

--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -22,3 +22,12 @@ This page links to resources that might be interesting or useful during class. *
 - Here's a living document I'll continue to develop this week, a [**glossary/risk list**](https://class.hillvt.com/assets/glossary.txt) for topics in this class. It's incomplete and kind of lame at this point, it will get better this week. That is, if you help me keep an eye on it and ask good questions for me to answer and add. Don't forget that there's also a [**great FFIEC glossary**](https://ithandbook.ffiec.gov/glossary) that - while not super-detailed in IT, does overlap with our topics somewhat.
 
 - As you can see, one physical layer risk is cable tapping. It's hard to imagine that being done against a community bank, but hey, never say never! The US did this during the cold war, a crazy story that's outlined in [**this fantastic book**](https://www.thriftbooks.com/w/blind-mans-bluff-the-untold-story-of-american-submarine-espionage-by-sherry-sontag-christopher-drew/250927/).
+
+### Wednesday June 25
+
+- If you're interested in a bit more detail about how vLANs work, particularly the "tagging" part, [**this is a pretty good**](https://www.networkacademy.io/ccna/ethernet/vlan-trunking) illustration of how the tag identifies the vLAN number. Nice little animations too.
+
+- We only have time to scratch the surface of IP addressing and operations, but there are many resources to help you understand more. Digital Ocean has [**many useful explainers**](https://www.digitalocean.com/community/tags/networking) on various networking topics; their [**Understanding IP Addresses, Subnets, and CIDR Notation**](https://www.digitalocean.com/community/tutorials/understanding-ip-addresses-subnets-and-cidr-notation-for-networking) is a really good one. This one from [How-To Geek](https://www.howtogeek.com/341307/how-do-ip-addresses-work/) is also pretty good.
+
+
+
