--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -25,9 +25,18 @@ This page links to resources that might be interesting or useful during class. *
 
 ### Wednesday June 25
 
-- If you're interested in a bit more detail about how vLANs work, particularly the "tagging" part, [**this is a pretty good**](https://www.networkacademy.io/ccna/ethernet/vlan-trunking) illustration of how the tag identifies the vLAN number. Nice little animations too.
+- If you're interested in more detail about how vLANs work, [**this is a pretty good illustration**](https://www.networkacademy.io/ccna/ethernet/vlan-trunking). Nice little animations too.
 
-- We only have time to scratch the surface of IP addressing and operations, but there are many resources to help you understand more. Digital Ocean has [**many useful explainers**](https://www.digitalocean.com/community/tags/networking) on various networking topics; their [**Understanding IP Addresses, Subnets, and CIDR Notation**](https://www.digitalocean.com/community/tutorials/understanding-ip-addresses-subnets-and-cidr-notation-for-networking) is a really good one. This one from [How-To Geek](https://www.howtogeek.com/341307/how-do-ip-addresses-work/) is also pretty good.
+- This is likely more than you want to know, but blame Noah K for that! In Wi-Fi the SSID does function as a salt for WPA2 key derivation, but hiding the SSID doesn't prevent modern attacks — as Noah hinted, attacks today don’t rely on rainbow tables anyway. WPA3 fixes these weaknesses by design. Here are a few related references: 
+
+     - US-CERT says [Disabling SSID broadcast does not prevent wireless sniffing](https://www.cisa.gov/news-events/news/securing-wireless-networks)
+
+     - How-To Geek asks [Does hiding your Wi-Fi SSID make it more secure?](https://www.howtogeek.com/218928/does-hiding-your-wi-fi-ssid-make-your-network-more-secure/)
+
+     - Here's a good reference from Comparitech on [the differences between WPA2 and 3](https://www.comparitech.com/blog/information-security/what-is-wpa3/).
+
+
+- We only scratch the surface of IP addressing and operations, but there are many resources to help you understand more. Digital Ocean has [**many useful explainers**](https://www.digitalocean.com/community/tags/networking) on various networking topics; their [**Understanding IP Addresses, Subnets, and CIDR Notation**](https://www.digitalocean.com/community/tutorials/understanding-ip-addresses-subnets-and-cidr-notation-for-networking) is a really good one. This one from [How-To Geek](https://www.howtogeek.com/341307/how-do-ip-addresses-work/) is also pretty good.
 
 
 
