new post section

--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -35,7 +35,7 @@ This page links to resources that might be interesting or useful during class. *
      -
 
 
-- We only scratch the surface of IP addressing and operations, but there are many resources to help you understand more. Digital Ocean has [**many useful explainers**](https://www.digitalocean.com/community/tags/networking) on various networking topics; their [**Understanding IP Addresses, Subnets, and CIDR Notation**](https://www.digitalocean.com/community/tutorials/understanding-ip-addresses-subnets-and-cidr-notation-for-networking) is a really good one. This one from [How-To Geek](https://www.howtogeek.com/341307/how-do-ip-addresses-work/) is also pretty good.
+- We only scratch the surface of IP addressing and operations, but there are many resources to help you understand more. Digital Ocean has [**many useful explainers**](https://www.digitalocean.com/community/tags/networking) on various networking topics; their [**Understanding IP Addresses, Subnets, and CIDR Notation**](https://www.digitalocean.com/community/tutorials/understanding-ip-addresses-subnets-and-cidr-notation-for-networking) is a really good one. [**This one from How-To Geek**](https://www.howtogeek.com/341307/how-do-ip-addresses-work/) is also good.
 
 - If you're interested in the equipiment and management interface I've been demoing for the last couple of days, that's [**Ubiquiti Networks**](https://www.ui.com/). I have no interest in them, not an investor, etc, but I like how they have broken the "reseller model" that has made network stuff so expensive for decades. Even a tiny bank could afford this stuff!
 
