--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -27,7 +27,7 @@ This page links to resources that might be interesting or useful during class. *
 
 - If you're interested in more detail about how vLANs work, [**this is a pretty good illustration**](https://www.networkacademy.io/ccna/ethernet/vlan-trunking). Nice little animations too.
 
-- This is likely more than you want to know, but blame Noah K for that! In Wi-Fi the SSID does function as a salt for WPA2 key derivation, but hiding the SSID doesn't prevent modern attacks — as Noah hinted, attacks today don’t rely on rainbow tables anyway. WPA3 fixes these weaknesses by design. Here are a few related references: 
+- This is likely more than you want to know, but blame Noah K for that! In Wi-Fi the SSID does function as a salt for WPA2 key derivation, but hiding the SSID doesn't prevent modern attacks — as Noah hinted, attacks today don’t rely on [rainbow tables](https://www.csoonline.com/article/570931/rainbow-tables-explained-how-they-work-and-why-theyre-mostly-obsolete.html) anyway. WPA3 fixes these weaknesses by design. Here are a few related references: 
 
      - US-CERT says [**Disabling SSID broadcast does not prevent wireless sniffing**](https://www.cisa.gov/news-events/news/securing-wireless-networks)
      - How-To Geek asks [**Does hiding your Wi-Fi SSID make it more secure?**](https://www.howtogeek.com/218928/does-hiding-your-wi-fi-ssid-make-your-network-more-secure/)
