new post section

--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -39,4 +39,5 @@ This page links to resources that might be interesting or useful during class. *
 
 - If you're interested in the equipiment and management interface I've been demoing for the last couple of days, that's [**Ubiquiti Networks**](https://www.ui.com/). I have no interest in them, not an investor, etc, but I like how they have broken the "reseller model" that has made network stuff so expensive for decades. Even a tiny bank could afford this stuff!
 
+- Matt's link of the day: [**El Reg**](https://www.theregister.com/). A very snarky and pretty smart British look at IT security and related topics.
 
