--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -41,3 +41,16 @@ This page links to resources that might be interesting or useful during class. *
 
 - Matt's link of the day: [**El Reg**](https://www.theregister.com/). A very snarky and pretty smart British look at IT security and related topics. Check out today's fake TLS certificate news.
 
+### Thursday June 26
+
+- Here are [the questions you developed](https://class.hillvt.com/assets/wednesdayquestions.txt) during the exercise yesterday. I'm a txt kind of guy, so it's just a .txt file. Not pretty, but easy to copy and paste into whatever format you prefer...
+
+- If you were paying attention yesterday you heard me mention "Salt Typhoon" and you may have wondered where crazy names like that come from. Gary shared this great article in the chat, and I want to make sure you don't miss it: [**How Microsoft names threat actors**](https://learn.microsoft.com/en-us/unified-secops-platform/microsoft-threat-actor-naming). 
+
+- Here's a great short explainer on [**how TCP does its amazing job.**](https://sookocheff.com/post/networking/how-does-tcp-work/) We don't have time to talk about all the details of TCP, like error correction and flow control, but they are super cool.
+
+- The Internet Society on [**how TLS works.**](https://www.internetsociety.org/deploy360/tls/basics/) It's a bit old but still largely correct and clear.
+
+- Cloudflare has a [**great explainer on**](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) Public Key Cryptography and some other crypto things.
+
+
