wednesday adds and questions

--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -43,7 +43,7 @@ This page links to resources that might be interesting or useful during class. *
 
 ### Thursday June 26
 
-- Here are [the questions you developed](https://class.hillvt.com/assets/wednesdayquestions.txt) during the exercise yesterday. I'm a txt kind of guy, so it's just a .txt file. Not pretty, but easy to copy and paste into whatever format you prefer...
+- Here are [**the questions you developed**](https://class.hillvt.com/assets/wednesdayquestions.txt) during the exercise yesterday. I'm a txt kind of guy, so it's just a .txt file. Not pretty, but easy to copy and paste into whatever format you prefer...
 
 - If you were paying attention yesterday you heard me mention "Salt Typhoon" and you may have wondered where crazy names like that come from. Gary shared this great article in the chat, and I want to make sure you don't miss it: [**How Microsoft names threat actors**](https://learn.microsoft.com/en-us/unified-secops-platform/microsoft-threat-actor-naming). 
 
@@ -51,6 +51,5 @@ This page links to resources that might be interesting or useful during class. *
 
 - The Internet Society on [**how TLS works.**](https://www.internetsociety.org/deploy360/tls/basics/) It's a bit old but still largely correct and clear.
 
-- Cloudflare has a [**great explainer on**](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) Public Key Cryptography and some other crypto things.
-
+- Cloudflare has a great explainer on [**Public Key Cryptography**](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) and some other crypto things.
 
