wednesday adds and questions

--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -53,3 +53,4 @@ This page links to resources that might be interesting or useful during class. *
 
 - Cloudflare has a great explainer on [**Public Key Cryptography**](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/) and some other crypto things.
 
+- We talked about [**business services for network availability**](https://www.spectrum.com/business/internet/wireless-internet-backup) that are available from major network providers. Many of these use [**equipment from Cradlepoint**](https://cradlepoint.com/products/branch/branch-continuity/), acquired last year by Ericsson.
