--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -55,7 +55,7 @@ This page links to resources that might be interesting or useful during class. *
 
 - We talked about [**business services for network availability**](https://www.spectrum.com/business/internet/wireless-internet-backup) that are available from major network providers. Many of these use [**equipment from Cradlepoint**](https://cradlepoint.com/products/branch/branch-continuity/), acquired last year by Ericsson.
 
-- An article from Webroot on [**the importance of DNS security**](https://www.webroot.com/us/en/resources/tips-articles/dns-security-best-practices), and here's another [**pretty good article**](https://resources.infosecinstitute.com/topic/dns-security-best-practices-preventing-dns-hijacking-poisoning-and-redirection/) from Infosec on the same topic.
+- An article from Webroot on [**the importance of DNS security**](https://www.webroot.com/us/en/resources/tips-articles/dns-security-best-practices), and here's another [**pretty good article**](https://www.infosecinstitute.com/resources/general-security/dns-security-best-practices-preventing-dns-hijacking-poisoning-and-redirection/) from Infosec on the same topic.
 
 - There is a relatively new, more secure version of the DNS protocol called DNSSEC, which is just beginning to see broad deployment. Cloudflare has a [**great short article**](https://www.cloudflare.com/dns/dnssec/how-dnssec-works/) on how it works.
 
