--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -60,3 +60,25 @@ This page links to resources that might be interesting or useful during class. *
 - There is a relatively new, more secure version of the DNS protocol called DNSSEC, which is just beginning to see broad deployment. Cloudflare has a [**great short article**](https://www.cloudflare.com/dns/dnssec/how-dnssec-works/) on how it works.
 
 - Cryptography is hard, but it’s less hard when it’s filled with adorable Japanese manga. Check out this [**Manga Guide to Cryptography**](https://www.amazon.com/Manga-Guide-Cryptography-Guides/dp/1593277423/ref=sr_1_1?keywords=manga+crypto&qid=1671396861&sr=8-1), it's crazy and actually technically pretty deep! Maybe you need a gift for that millenial crypto-geek on your shopping list?
+
+- As we saw in class, here's the [**SSL Labs tool**](https://www.ssllabs.com/ssltest/) that lets you see how secure a bank's (or anyone's) website is.
+
+### Friday June 27
+
+- The Verizon [**Data Breach Investigation Report**](https://www.verizon.com/business/resources/reports/dbir/) is a great resource to help you know about what threats are out there.
+
+- Books (not Manga) we discussed or that came up during class discussion:
+    - [**The Age of Survelliance Capitalism**](https://bookshop.org/p/books/the-age-of-surveillance-capitalism-the-fight-for-a-human-future-at-the-new-frontier-of-power-shoshana-zuboff/9240225?ean=9781541758001)
+    - [**Privacy is Power**](https://bookshop.org/p/books/privacy-is-power-why-and-how-you-should-take-back-control-of-your-data-carissa-veliz/15315465?ean=9781612199672)
+    - [**The Cyber Effect**](https://bookshop.org/p/books/the-cyber-effect-an-expert-in-cyberpsychology-explains-how-technology-is-shaping-our-children-our-behavior-and-our-values-and-what-w-mary-aiken/11742110?ean=9780812987478)
+    - The [**Electronic Frontier Foundation**](https://www.eff.org/) - not a book, but worth your time and consideration if you care about stuff like this.
+
+#### Some of the contents of my "daily" folder 
+- [**CyberScoop**](https://cyberscoop.com/) - general-purpose cyber news
+- [**Fierce Telecom**](https://www.fiercetelecom.com/) - some telecom, some IT
+- [**SDX Central**](https://www.sdxcentral.com/) - good moderately-technical rundown of current evens in the SD Networking world
+- [**The Register**](https://www.theregister.com/) - cheeky British security writing
+- [**Krebs on Security**](https://krebsonsecurity.com/) - Brian Krebs' in-depth reporting on security issues
+- [**Schneier on Security**](https://www.schneier.com/) - Bruce Schneier is a legend in security. His site goes deep. He likes squids.
+- [**Data Breach Today**](https://www.databreachtoday.com/) - what bad things happened yesterday
+- [**Bleeping Computer**](https://www.bleepingcomputer.com/) - consumer (client) focus on computer problems
