--- a/_posts/2025-06-04-FDIC-ITT.md
+++ b/_posts/2025-06-04-FDIC-ITT.md
@@ -5,6 +5,8 @@ title:  "June 23-27, 2025 - FDIC Introduction to Telecommunications and Networki
 
 This page links to resources that might be interesting or useful during class. **It's not an assignment and nothing here is required reading.** But as we move through the week, I'll post links related to class topics, assignments, and other interesting nuggets.
 
+- Here's the [**class Powerpoint file**](https://class.hillvt.com/assets/FDIC-ITT-20250627.pptx) from this week.
+
 ### Monday June 23
 
 - You may find the story of [**Claude Shannon**](https://www.historyofdatascience.com/claude-shannon/) interesting. His work made modern data communications possible. If you prefer your history in movie form, there is a cute [**short documentary**](https://thebitplayer.com/) about him. You needn't watch the whole thing ([**it's on Amazon Prime**](https://www.amazon.com/Bit-Player-John-Hutton/dp/B08D2TXKSX/ref=sr_1_1?crid=3E4Z8DHU6MWW9&keywords=bit+player+movie&qid=1670604926&sprefix=bit+player+movie%2Caps%2C266&sr=8-1) if you want to), but you might find at least [**the trailer**](https://www.youtube.com/watch?v=E3OldEtfBrE) interesting. The flaming trumpet and AI mouse are just bonus material. And where do you think Anthropic [**got the name for their AI**](https://claude.ai/new)? (If you're on an FDIC or State computer, that last link may be broken, sorry. We'll talk about why in class...)
